--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,16 @@
 p {
   display: none;
+  font-size: 14px;
 }
 
 .card {
   border: 1px solid black;
-  width: 200px;
-  height: 200px;
-  margin: 10px;
+  width: 50%;
+  padding: 0px 20px 10px 20px;
+  margin-bottom: 10px;
+  background-color: lightblue;
+}
+
+h2 {
+  font-size: 20px;
 }
