--- a/css/styles.css
+++ b/css/styles.css
@@ -6,11 +6,18 @@ p {
 .card {
   border: 1px solid black;
   width: 50%;
-  padding: 0px 20px 10px 20px;
+
   margin-bottom: 10px;
   background-color: lightblue;
 }
-
+.card h2 {
+  background-color: #7ba7b5;
+  width: 100%;
+  text-align: center;
+}
+.card p {
+ padding: 0px 20px 10px 20px;
+}
 h2 {
   font-size: 20px;
 }
