--- a/css/styles.css
+++ b/css/styles.css
@@ -6,18 +6,19 @@ p {
 .card {
   border: 1px solid black;
   width: 50%;
-
-  margin-bottom: 10px;
   background-color: lightblue;
+  margin: 5px 0px;
 }
 .card h2 {
   background-color: #7ba7b5;
   width: 100%;
+  padding: 3px 0px;
   text-align: center;
 }
 .card p {
- padding: 0px 20px 10px 20px;
+ padding: 10px 20px;
 }
+
 h2 {
   font-size: 20px;
 }
