--- a/css/styles.css
+++ b/css/styles.css
@@ -8,27 +8,29 @@ h1 {
   font-size: 60px;
 }
 
-.panel {
-  height: 250px;
-  overflow: auto;
-  border: 1px solid black;
-  margin-left: 40px;
-  background-image: url("../img/card.jpg");
-}
-.card {
-  border: 1px solid black;
-  background-color: lightblue;
+.card h2{
+  background-color: rgba(244, 248, 32, 0.55);
+  margin: 0px 70px;
 }
 
 .card p {
  padding: 10px 20px;
 }
+
+.panel {
+  height: 250px;
+  overflow: auto;
+  margin-left: 40px;
+  background-image: url("../img/card.jpg");
+}
+
 .panel h2 {
   font-size: 30px;
   text-align: center;
   padding: 10px 0px;
   font-family: 'Shadows Into Light', cursive;
 }
+
 .panel p {
   display: none;
   font-size: 24px;
